# -PollSystem

./: CMakeLists.txt  README.md
include/: Analyzer.h  BudgetAnalyzer.h  BudgetVote.h  GeneralAnalyzer.h  SportsAnalyzer.h  SportsVote.h  UserInterface.h  Vote.h  Voter.h  functions.h
src/: Analyzer.cpp  BudgetAnalyzer.cpp  BudgetVote.cpp  GeneralAnalyzer.cpp  SportsAnalyzer.cpp  SportsVote.cpp  UserInterface.cpp  Vote.cpp  Voter.cpp  functions.cpp  main.cpp
test/: AnalyzerTests.cpp  VoteTests.cpp  VoterTests.cpp  master.cpp
